Finished footer placed  social links and contact information, fixed some misplaced divs and alignment problems

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,10 +23,6 @@ html {
 	background-color: rgba(0, 0, 0, 0.4);
 }
 
-.bg-color-footer {
-	background-color: #232323;
-}
-
 /*----------------------Buttons---------------- */
 
 .btn-cta {
@@ -274,4 +270,25 @@ html {
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	background-size: cover;
+}
+
+/*----------------------Footer---------------- */
+
+.footer-container {
+	height: 20%;
+	background-color: #232323;
+}
+
+.footer-container h1 {
+	font-weight: 600;
+	font-size: 90px;
+	letter-spacing: 0.145em;
+	color: #fff;
+}
+
+.footer-container p {
+	font-weight: 200;
+	font-size: 20px;
+	letter-spacing: -0.015em;
+	padding-top: 2px;
 }
